<resources>
    <string name="app_name">JUST Digital Diary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string-array name="vehicle_array">
        <item>Search Vehicle</item>
        <item>Shapla</item>
        <item>Kapotakkho</item>
        <item>Voirab</item>
        <item>Rojoni Gandha</item>
    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_vc_message">Message (Vice-Chancellor)</string>
    <string name="vc_message">It is my great pleasure to invite you to explore the <b>Jashore University of Science and Technology (JUST)</b> online through our website. Contribution of science and technology for developing a nation is well known to all. To meet up the diversified demand of people, information and communication technology and biological sciences are playing the key role.\n\nUniversity is the most suitable place for education and research. Universities are playing a vital role in building efficient manpower for the development of the country as well as for the global need. With a view to imparting science and technology oriented education in Bangladesh, the <b>Jashore University of Science and Technology</b> was established in 2007 by the<b> Shadhinota Shorok (Independence Road)</b> in Jashore district. The first batch of students was admitted in 2008-2009 session. The honorable Prime Minister of the People’s Republic of Bangladesh, <b>Sheikh Hasina,</b> inaugurated the campus of the university on December 27, 2010.</string>
    <string name="welcome_notice_splash_screen">Welcome to\nJUST Digital Diary\nMobile App</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">About Us</string>
    <string name="share_app">Share App</string>
    <string name="welcome_note">JUST Digital Diary Mobile App</string>
    <string name="about_us_text"><i>Design and Development by</i>\n
        <b>Computer Science and Engineering Department</b>\n
        <b>Jashore University of Science and Technology, Jashore.</b></string>
    <string name="upcomingFeatures">Upcoming features: Contact search option, Calendar interface upgradation, Vehicle tracking system, Control panel etc.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="API_KEY">API_KEY</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_note_alert">Nothing to show here!</string>
    <string name="add_note_desc">Add Note</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Profile</string>
    <string name="click_to_call">Click to call</string>
    <string name="click_to_send_mail">Click to send mail</string>
    <string name="click_to_send_text_message">Click to send text message</string>
    <string name="add_entry">Add New Entry</string>
    <string name="manual">Simply follow the <b>Sign up</b> and <b>Login</b> instructions to complete your registration to use this application. Here are some issues that you may concern</string>
    <string name="email_manual">Please enter your <b>institutional/academic email</b></string>
    <string name="pass_manual">Please create a <b>strong sassword</b> with minimum 6 characters</string>
    <string name="dept_manual">Please enter your corresponding <b>department or section</b> or any other <b>category.</b></string>
    <string name="sign_up_manual">After fill up all the input, click on the <b>Sign Up</b> button.</string>
    <string name="verify_manual">Now this notify you that a <b>email verification</b> link has been sent to your email so, please go to your email and confirm that the given email has real existence/correct.</string>
    <string name="login_manual">After verifying your email address please fill up the Login form and click on <b>Login</b> button. Now enjoy our application and don\'t forget to share your opinion to us.</string>
    <string name="faculty_manual">All the input filling up is same for this particular except <b>Department/Section</b> field. For this particular field we have to obey the following instructions.</string>
    <string name="faculty_sec_manual">In this field we have to set the exact name of the faculty with the exact patterns. The must followed pattern is like- <b>\'Faculty of Engineering and Technology\'</b>. We have to set the name which <b>starts with \'Faculty of\' keyword.</b></string>
    <string name="fac_head_manual">For faculties, staff and general students:</string>
    <string name="c_pass_manual"><b>Confirm</b> your password.</string>
</resources>
