<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vc_message"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_vc_message" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_feedBack"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="@string/feedback" />

        <item
            android:id="@+id/signOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/sign_out" />
    </group>
</menu>