<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Authentication.UserManual">

    <!--<WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/fac_head_manual"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual"
            android:textSize="12sp"
            android:justificationMode="inter_word"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="-15dp"
                android:background="@drawable/background_right"
                android:gravity="center"
                android:padding="3dp"
                android:text="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="15dp"
                android:background="@drawable/background_box"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="3dp"
                    android:src="@drawable/email_ss" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:padding="3dp"
                    android:text="@string/email_manual"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="-15dp"
                android:background="@drawable/background_right"
                android:gravity="center"
                android:padding="3dp"
                android:text="2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginRight="15dp"
                android:background="@drawable/background_box"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="3dp"
                    android:src="@drawable/pass_ss" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:justificationMode="inter_word"
                    android:padding="3dp"
                    android:text="@string/pass_manual"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="-15dp"
                android:background="@drawable/background_right"
                android:gravity="center"
                android:padding="3dp"
                android:text="3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="15dp"
                android:background="@drawable/background_box"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="3dp"
                    android:src="@drawable/pass_c_ss" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:justificationMode="inter_word"
                    android:gravity="start"
                    android:padding="3dp"
                    android:text="@string/c_pass_manual"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="-15dp"
                android:background="@drawable/background_right"
                android:gravity="center"
                android:padding="3dp"
                android:text="4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginRight="15dp"
                android:background="@drawable/background_box"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="3dp"
                    android:src="@drawable/fname_ss" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:padding="3dp"
                    android:text="Please write your full name here"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="-15dp"
                android:background="@drawable/background_right"
                android:gravity="center"
                android:padding="3dp"
                android:text="5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="15dp"
                android:background="@drawable/background_box"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="3dp"
                    android:src="@drawable/dept_ss" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:padding="3dp"
                    android:text="@string/dept_manual"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="-15dp"
                android:background="@drawable/background_right"
                android:gravity="center"
                android:padding="3dp"
                android:text="6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginRight="15dp"
                android:background="@drawable/background_box"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="5dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="3dp"
                    android:src="@drawable/sign_up_ss" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:padding="3dp"
                    android:text="@string/sign_up_manual"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="-15dp"
                android:background="@drawable/background_right"
                android:gravity="center"
                android:padding="3dp"
                android:text="7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="15dp"
                android:background="@drawable/background_box"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="3dp"
                    android:src="@drawable/verify_ss" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:padding="3dp"
                    android:text="@string/verify_manual"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="-15dp"
                android:background="@drawable/background_right"
                android:gravity="center"
                android:padding="3dp"
                android:text="8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginRight="15dp"
                android:background="@drawable/background_box"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:padding="3dp"
                    android:justificationMode="inter_word"
                    android:text="@string/login_manual"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="Some special instructions for faculty offices"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faculty_manual"
            android:textSize="12sp"
            android:justificationMode="inter_word"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="-15dp"
                android:background="@drawable/background_right"
                android:gravity="center"
                android:padding="3dp"
                android:text="9" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="15dp"
                android:background="@drawable/background_box"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="3dp"
                    android:src="@drawable/dept_ss" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:padding="3dp"
                    android:text="@string/faculty_sec_manual"
                    android:justificationMode="inter_word"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>